<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/viewmyprofile"
        android:orderInCategory="100"
        android:title="@string/my_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/currenttask_screen"
        android:orderInCategory="100"
        android:title="@string/current_task"
        app:showAsAction="never" />
    <item
        android:title="@string/update"
        app:showAsAction="ifRoom"
        android:id="@+id/updatetasks"

        />
    <item
        android:title="@string/points"
        app:showAsAction="ifRoom"
        android:id="@+id/mypoints"


        />
    <item
        android:id="@+id/showgroupkidmain"
        android:orderInCategory="100"
        android:title="@string/show_group"
        app:showAsAction="never" />

    <item
        android:id="@+id/logoutkidmain"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>