<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/linear_layout5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reallyleave" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonyes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonback"
            android:text="@string/yes" />

        <Button
            android:id="@+id/buttonno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/resetbutton"
            android:text="@string/no" />
    </LinearLayout>
</LinearLayout>
