<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/colorPrimaryDark"
    >

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@android:color/white"
        android:textSize="25sp"

        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/name" />

    <TextView
        android:id="@+id/username_popup"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/role" />

    <TextView
        android:id="@+id/userrole_popup"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/group" />

    <TextView
        android:id="@+id/usergroup_popup"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimaryDark"
    />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="@string/points" />

    <TextView
        android:id="@+id/userpoints_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="TextView" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorPrimaryDark"
         />

    <Button
        android:id="@+id/button_popup"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textColor="@android:color/white"
        android:textSize="20dp" />
</LinearLayout>