<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"



    >

    <LinearLayout
        android:id="@+id/linearLayoutidc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loginregisterbutton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21af">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/inputlyoutunwichtigfk"
            android:layout_width="match_parent"
            android:layout_height="65dp"

            >

            <EditText
                android:id="@+id/inputnameregister"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textinputfeldloginregister"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/inputlyoutunwichtigk"
            android:layout_width="match_parent"
            android:layout_height="65dp"

            >

            <EditText
                android:id="@+id/inputemailregister"

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textinputfeldloginregister"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/inputlyoutunwichtigsf"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/inputpasswordregister"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/textinputfeldloginregister"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />


        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/registerbutton"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttonhintergrund"
            android:text="@string/register" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewww"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/noaccountyet"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginregisterbutton1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginregisterbutton1" />

    <TextView
        android:id="@+id/loginregisterbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/seguisb"
        android:text="@string/loginbutton"
        android:textColor="@color/hellpink"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewww"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutidc"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/textView21af"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/segoeuib"
        android:text="@string/registerheadline"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutidc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/parent"
        android:textColor="@android:color/white"
        android:buttonTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/checkBox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:textColor="@android:color/white"
        android:buttonTint="@android:color/white"
        android:layout_marginBottom="10dp"
        android:text="@string/child"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutidc"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>