<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/task">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/segoeuib"
        android:text="@string/creategroup"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createbutton"

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="156dp"
        android:background="@drawable/buttonhintergrund"
        android:fontFamily="@font/segoeui"
        android:text="@string/create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newgroupname" />

    <EditText
        android:id="@+id/newgroupname"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/textinputfeldloginregister"
        android:ems="10"
        android:hint="@string/groupname"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView286" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="182dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createbutton" />

    <TextView
        android:id="@+id/textView286"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="183dp"
        android:fontFamily="@font/segoeuib"
        android:text="@string/groupnamedoppel"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView2233"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="120dp"
        android:clickable="true"

        android:fontFamily="@font/segoeui"
        android:text="@string/whydoineedagroup"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createbutton" />
</androidx.constraintlayout.widget.ConstraintLayout>